--- a/invapp/templates/invapp/base.html
+++ b/invapp/templates/invapp/base.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <center>
-        <img src="{% static "invapp/img/invitation.png"%}" style="max-height:500px"/>
-        <img src="{% static "invapp/img/image.png"%}" style="max-height:500px"/>
+        <img src="{% static "invapp/img/invitation.png"%}" style="max-height:500px">
+        <img src="{% static "invapp/img/image.png"%}" style="max-height:500px">
         <div>
             <p>謹啓</p>
             <p>皆様におかれましては</p>
