--- a/invapp/static/css/invapp.css
+++ b/invapp/static/css/invapp.css
@@ -14,10 +14,15 @@
     margin-left: 40px;
 }
 
-h1, h2, h3, h4 {
+h1{
     font-family: 'Lobster', cursive;
+    font-size: 40pt;
 }
 
+h2, h3, h4 {
+    font-family: 'Lobster', cursive;
+    font-size: 20pt;
+}
 .date {
     color: #828282;
 }
