--- a/invapp/templates/invapp/detail.html
+++ b/invapp/templates/invapp/detail.html
@@ -10,24 +10,23 @@
     </head>
     <body>
         <center>
-        <img src="{% static "invapp/img/インフォメーションピクト.png"%}" style="max-height:500px"/>
-        <img src="{% static "invapp/img/image.png"%}" style="max-height:500px"/>
+        <img src="{% static "invapp/img/インフォメーションピクト.png"%}" width="250px"/>
         <div>
-            <p>2019年10月19日（土曜日）</p>
-            <p>受付　11時xx分</p>
-            <p>受付　12時xx分</p>
-            <p>披露宴　13時xx分</p>
+            <h2>20ンピ年10月19日（土曜日）</h2>
+            <h2>受付　11時xx分</h2>
+            <h2>受付　12時xx分</h2>
+            <h2>披露宴　13時xx分</h2>
         </div>
         <div>
-            <p>大阪中央公会堂</p>
-            <p>にゃんご</p>
-            <p>にゃんご</p>
+            <h2>大阪中央公会堂</h2>
+            <h2>にゃんご</h2>
+            <h2>にゃんご</h2>
         </div>
         <div>
-            <p>返信をお願い致します</p>
+            <h2>返信をお願い致します</h2>
         </div>
         <div>
-            <h1><a href="/">top</a></h1>
+            <h1><a href="/input/"><img src="{% static "invapp/img/入力アイコン.png"%}" width="250px"/></a></h1>
         </div>
         </center>
     </body>
