--- a/invapp/templates/invapp/base.html
+++ b/invapp/templates/invapp/base.html
@@ -10,29 +10,29 @@
     </head>
     <body>
         <center>
-        <img src="{% static "invapp/img/invitation.png"%}" style="max-height:500px"/>
+        <img src="{% static "invapp/img/invitation.png"%}" width="750px"/>
         <img src="{% static "invapp/img/image.png"%}" style="max-height:500px"/>
         <div>
-            <p>謹啓</p>
-            <p>皆様におかれましては</p>
-            <p>ますますご清祥のこととお慶び申し上げます</p>
+            <h1>謹啓</h1>
+            <h2>皆様におかれましては</h2>
+            <h2>ますますご清祥のこととお慶び申し上げます</h2>
         </div>
         <div>
-            <p>このたび　私たちは結婚をすることになりました</p>
-            <p>つきましては　日頃お世話になっております皆様に</p>
-            <p>感謝を込めて　ささやかな小宴を催したく存じます</p>
+            <h2>このたび　私たちは結婚をすることになりました</h2>
+            <h2>つきましては　日頃お世話になっております皆様に</h2>
+            <h2>感謝を込めて　ささやかな小宴を催したく存じます</h2>
         </div>
         <div>
-            <p>ご多用中　誠に恐縮ではございますが</p>
-            <p>ぜひご出席をいただきたく　ご案内申し上げます</p>
+            <h2>ご多用中　誠に恐縮ではございますが</h2>
+            <h2>ぜひご出席をいただきたく　ご案内申し上げます</h2>
         </div>
         <div>
-            <p>謹白</p>
-            <p>2019年8月吉日 </p>
+            <h1>謹白</h1>
+            <h2>2019年8月吉日 </h2>
         </div>
-        <div>
-            <h1><a href="/detail/">Infomation</a></h1>
-            <h1><a href="https://goo.gl/maps/pJLducd8Eb9YTRm19">Access</a></h1>
+        <div align="center">
+            <a href="/detail/"><img src="{% static "invapp/img/インフォメーション.png"%}" width="250px"/></a>　　
+            <a href="https://goo.gl/maps/pJLducd8Eb9YTRm19"><img src="{% static "invapp/img/アクセス.png"%}" width="250px"/></a>
         </div>
         </center>
     {% block content %}
