--- a/invapp/templates/invapp/send.html
+++ b/invapp/templates/invapp/send.html
@@ -11,6 +11,7 @@
     <body>
         <center>
         <img src="{% static "invapp/img/invitation.png"%}" width="250px"/>
+            <h1>Thanks</h1>
         <div>
             <h1><a href="/"><img src="{% static "invapp/img/入力アイコン.png"%}" width="250px"/></a></h1>
         </div>
