--- a/invapp/templates/invapp/input.html
+++ b/invapp/templates/invapp/input.html
@@ -17,7 +17,7 @@
             <h2>返信をお願い致します</h2>
         </div>
         <div>
-            <h1><a href="/send/"><img src="{% static "invapp/img/送信アイコン.png"%}" width="250px"/></a></h1>
+            <h1><a href="/send_page/"><img src="{% static "invapp/img/送信アイコン.png"%}" width="250px"/></a></h1>
         </div>
         </center>
 
