--- a/invapp/templates/invapp/base.html
+++ b/invapp/templates/invapp/base.html
@@ -18,6 +18,8 @@
             <h2>ますますご清祥のこととお慶び申し上げます</h2>
         </div>
         <div>
+            <a href="https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1609410808&redirect_uri=http://stkc.pythonanywhere.com
+&state={{ random_state }}&scope=openid%20profile">a) }}"></a>
             <h2>このたび　私たちは結婚をすることになりました</h2>
             <h2>つきましては　日頃お世話になっております皆様に</h2>
             <h2>感謝を込めて　ささやかな小宴を催したく存じます</h2>
@@ -31,7 +33,7 @@
             <h2>2019年8月吉日 </h2>
         </div>
         <div align="center">
-            <a href="/detail/"><img src="{% static "invapp/img/インフォメーション.png"%}" width="250px"/></a>　　
+            <a href="{% url 'detail' %}"><img src="{% static "invapp/img/インフォメーション.png"%}" width="250px"/></a>　　
             <a href="https://goo.gl/maps/pJLducd8Eb9YTRm19"><img src="{% static "invapp/img/アクセス.png"%}" width="250px"/></a>
         </div>
         </center>
