--- a/invapp/templates/invapp/detail.html
+++ b/invapp/templates/invapp/detail.html
@@ -26,7 +26,9 @@
             <h2>返信をお願い致します</h2>
         </div>
         <div>
-            <h1><a href="/input_page/"><img src="{% static "invapp/img/入力アイコン.png"%}" width="250px"/></a></h1>
+
+            <h1><a href="{% url 'input_page'  %}"><img src="{% static "invapp/img/入力アイコン.png"%}" width="250px"/></a></h1>
+
         </div>
         </center>
     </body>
