--- a/invapp/templates/invapp/input.html
+++ b/invapp/templates/invapp/input.html
@@ -9,6 +9,55 @@
         <link rel="stylesheet" href="{% static 'css/invapp.css' %}">
     </head>
     <body>
+    <form action="" method="POST">
+    {% if form.errors %}
+        <div class="errorlist">
+            {% for errors in form.errors.values %}
+                {% for error in errors %}
+                    {{ error }}<br>
+                {% endfor %}
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    {% for field in form %}
+        <div class="field">
+            {{ field.label_tag }}
+            {{ field }}
+            {% if field.help_text %}
+                <span class="helptext">{{ field.help_text }}</span>
+            {% endif %}
+        </div>
+    {% endfor %}
+
+    {% csrf_token %}
+    </form>
+        <form action="" method="POST">
+            {{ form.non_field_errors }}
+            <div class="field">
+                {{ form.name.label_tag }}
+                {{ form.name }}
+                <span class="helptext">{{ form.name.help_text }}</span>
+                {{ form.name.errors }}
+            </div>
+            <div class="field">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+                <span class="helptext">{{ form.email.help_text }}</span>
+                {{ form.email.errors }}
+            </div>
+            <div class="field">
+                {{ form.text.label_tag }}
+                {{ form.text }}
+                {{ form.text.errors }}
+            </div>
+            <div class="field">
+                {{ form.category.label_tag }}
+                {{ form.category }}
+                {{ form.category.errors }}
+            </div>
+            {% csrf_token %}
+        </form>
         <center>
             <form action="" method="post">
                 <table>{{form1.as_table}}</table>
